--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
       </div> 
       
     </div> 
+    <div class="openSourceCode">
+        <a href="https://github.com/TaSaCoding/WheatherApp.git" target="_blank">
+            Open-source code
+        </a>
+         , by Tanja Sauer
+    </div>
 
     <script src="src/index.js"></script>
   </body>
