clean-up and matching Weather-Icons

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <nav class="navbar navbar-expand-lg navbar-light bg-light<nav class="navbar navbar-light bg-light" >
                   <div class="container-fluid" id= "city-input">
                     <a class="navbar-brand"><div class="labelLocation" id="city"> 
-                    Cologne, Germany</div></a>
+                    </div></a>
                     <form class="d-flex searchingLocation">
                       <input class="form-control me-2"
                       type="search"
@@ -45,11 +45,9 @@
                   </div>
                 </nav>
             <div class="labelContainerCompact"> 
-              <div class="labelDay" id="week-day"> 
-                  Monday,
+              <div class="labelDay" id="week-day">    
               </div>
               <div class="labelTime" id="current-time"> 
-                  22:00
               </div>
             </div>
 
@@ -59,21 +57,21 @@
         
           <div class="row">
               <div class="clearfix currentWeather">
-                <i class="fa-solid fa-cloud-moon "></i>
+              <img src="" alt="" id="icon" class="float-left"/>
                 <div class="float-left">
-                  <span class="temperature" id="temperature">19</span>
+                  <span class="temperature" id="temperature"></span>
                   <span class="units">
                       <a href="#" id="celsius-link">°C</a>
                   | <a href="#" id="fahrenheit-link">°F</a></span>
                 </div>
-                <span class="weatherText" id="weather-text"> Partly Cloudy </span>
+                <span class="weatherText" id="weather-text"></span>
               </div>
   
               <table>
                 <tbody>
                   <tr>
-                    <th scope="col"id="humidity">Humidity: 77%</th>
-                    <th scope="col"id="wind">Wind: 8 km/h</th> 
+                    <th scope="col"id="humidity"></th>
+                    <th scope="col"id="wind"></th> 
                   </tr>
                 </tbody>
               </table>  
