--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="float-left">
                   <span class="temperature" id="temperature"></span>
                   <span class="units">
-                      <a href="#" id="celsius-link">°C</a>
+                      <a href="#" id="celsius-link" class="active">°C</a>
                   | <a href="#" id="fahrenheit-link">°F</a></span>
                 </div>
                 <span class="weatherText" id="weather-text"></span>
