--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <input
                   class="form-control me-2"
                   type="search"
-                  placeholder="Type a City"
+                  placeholder="Type a City..."
                   autofocus="on"
                   autocomplete="off"
                   aria-label="search"
@@ -86,20 +86,7 @@
       </div>
     </div>
 
-    <div class="weather-forecast">
-      <div class="card" style="width: 5rem">
-        <img
-          src="http://openweathermap.org/img/wn/50d@2x.png"
-          alt=""
-          class="weather-icon float-left"
-        />
-        <div class="weather-forecast-date">Thu</div>
-        <div class="weather-forecast-temperatures">
-          <span class="weather-forecast-temperature-max"> 18° </span>
-          <span class="weather-forecast-temperature-min"> 12° </span>
-        </div>
-      </div>
-    </div>
+    <div class="weather-forecast" id="forecast"></div>
     <div class="openSourceCode">
       <a href="https://github.com/TaSaCoding/WheatherApp.git" target="_blank">
         Open-source code
